@@ -242,9 +242,13 @@ behaviour.
 fakechroot is distributed under the GNU Lesser General Public License (LGPL
 2.1 or greater).
 
+realpath reimplementation taken from Gnulib.  Copyright (C) 1996-2010 Free
+Software Foundation, Inc.
+
 =head1 AUTHORS
 
-Copyright (c) 2003, 2005, 2007, 2008, 2009, 2010 Piotr Roszatycki <dexter@debian.org>
+Copyright (c) 2003, 2005, 2007, 2008, 2009, 2010 Piotr Roszatycki
+<dexter@debian.org>
 
 Copyright (c) 2007 Mark Eichin <eichin@metacarta.com>
 
