@@ -2,6 +2,8 @@
 
 18 Nov 2010
 
+* Fixed +realpath+(3) function.  +apt-ftparchive+ command currently is
+  working.
 * Lazy dynamic symbol loading was implemented.  Thanks to Alexander Shishkin.
 * Fixed bug when +FAKECHROOT_EXCLUDE_PATH+ list was sometimes ignored.
 
